Login form check

--- a/src/app/includes/header/header/header.component.html
+++ b/src/app/includes/header/header/header.component.html
@@ -6,9 +6,9 @@
         </button>
         <span>My App</span>
         <span class="example-spacer"></span>
-        <button (click)="alter()" [routerLink]="['/',auth]" mat-icon-button  >
+        <button [routerLink]="['/',auth]" mat-icon-button  >
             <mat-icon>{{auth}}</mat-icon> {{auth}}
         </button>
-
+<!-- <p>{{auth}}</p> -->
     </mat-toolbar>
 </div>
