--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,10 @@
-<div >
+
+  
+  <div >
+
+   
     <h1  >Login Here  </h1>
-    <h3>{{error}}</h3>
+    <h3 style="color: red;">{{error}}</h3>
     <form  #loginForm="ngForm" class="example-form"  (ngSubmit)="onSubmit()">
         <mat-form-field class="example-full-width" appearance="fill">
           <mat-label>User Name</mat-label>
@@ -12,6 +16,7 @@
         </mat-form-field><br>
         <button mat-raised-button color="primary">Login</button>
     </form>
+
     
 </div>
     
