--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,29 +1,34 @@
-<h1  >Sign-Up here  </h1>
-<div >
-    <div class="mb-3">
+<h1>Sign-Up here </h1>
+<div>
+    <h3 style="color: red;">{{error}}</h3>
+    <form #loginForm="ngForm" name="signupform"  (ngSubmit)="onSubmit()">
+
         <label for="formcontrol" class="form-label">Full Name</label>
-        <input type="text" class="form-control" id="fullname" placeholder="fullname">
-    </div>
-    <div class="mb-3">
+        <input type="text" name ="fullname" name ="" [(ngModel)]="fullname" class="form-label" [ngModelOptions]="{standalone: true}"><br>
+
+
         <label for="formcontrol" class="form-label">Use Name</label>
-        <input type="text" class="form-control" id="username" placeholder="username">
-    </div>
-    <div class="mb-3">
+        <input type="text" name ="username" [(ngModel)]="username" class="form-label" [ngModelOptions]="{standalone: true}"><br>
+
+
         <label for="formcontrol" class="form-label">password</label>
-        <input type="password" class="form-control" id="password" placeholder="password">
-        </div>
-        <div class="mb-3">
-            <label for="formcontrol" class="form-label">Confirm Password</label>
-            <input type="password" class="form-control" id="confirmpassword" placeholder="confirmpassword">
-        </div>
-        <div class="mb-3">
-            <label for="formcontrol" class="form-label">Mobile No.</label>
-            <input type="text" class="form-control" id="mobileno" placeholder="mobileno">
-        </div>
-        <div class="mb-3">
-            <label for="formcontrol" class="form-label">Address</label>
-            <input type="text" class="form-control" id="address" placeholder="address">
-        </div>
-        
-        <button class="btn btn-primary" (click)="submitclicked()">Sign-Up</button>
+        <input type="password" name ="password" [(ngModel)]="password" class="form-label" [ngModelOptions]="{standalone: true}"><br>
+
+
+        <label for="formcontrol" class="form-label">Confirm Password</label>
+        <input type="password" name ="confirmpassword" [(ngModel)]="confirmpassword" class="form-label" [ngModelOptions]="{standalone: true}"><br>
+
+
+        <label for="formcontrol" class="form-label">Mobile No.</label>
+        <input type="text" name ="mobileno" [(ngModel)]="mobileno" class="form-label" [ngModelOptions]="{standalone: true}"><br>
+
+
+        <label for="formcontrol" class="form-label">Address</label>
+        <input type="text" class="form-label" name ="address" [(ngModel)]="address" [ngModelOptions]="{standalone: true}"><br>
+
+
+
+        <button class="btn btn-primary"  type="submit">Sign-Up</button><br>
+
+    </form>
 </div>
