--- a/src/app/pages/maincontent/maincontent.component.html
+++ b/src/app/pages/maincontent/maincontent.component.html
@@ -1,9 +1,11 @@
 <div class="container-fluid">
 
-    <mat-card class="example-card" style="width: 16rem;">
+<!-- ///////---------- Item 1  --------------//// -->
+    <form   (ngSubmit)="onSubmit()" >
+      <mat-card class="example-card" style="width: 16rem;">
         <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Hot Pizza Type 1</mat-card-title>
+      <mat-card-title  >{{pizzatype}}</mat-card-title>
       <mat-card-subtitle>Medium Size</mat-card-subtitle>
     </mat-card-header>
     <img mat-card-image src="../../../../assets/images/Pizza1.png" alt="Photo of a Shiba Inu">
@@ -11,25 +13,29 @@
         
     </mat-card-content>
     <mat-card-actions>
-        <mat-radio-group aria-label="Select an option">
-            <mat-radio-button value="1">Small</mat-radio-button>
-            <mat-radio-button value="2">Medium</mat-radio-button>
-            <mat-radio-button value="3">Large</mat-radio-button>
+        <mat-radio-group aria-label="Select an option" [(ngModel)]="size"  name="size">
+            <mat-radio-button value="Small">Small</mat-radio-button>
+            <mat-radio-button value="Medium">Medium</mat-radio-button>
+            <mat-radio-button value="Large">Large</mat-radio-button>
           </mat-radio-group>
-          <mat-radio-group aria-label="Select an option">
-            <section class="example-section">
-                <mat-checkbox class="example-margin">Ingredients  1</mat-checkbox>
-                <mat-checkbox class="example-margin">Ingredients  2</mat-checkbox>
-                <mat-checkbox class="example-margin">Ingredients  3</mat-checkbox>
-                </section>
+          <mat-radio-group aria-label="Select an option" >
+            <section class="example-section" >
+                <mat-checkbox class="example-margin" value="ing-1" name="ingredients1" [(ngModel)]="ingredients1">ingredients 1</mat-checkbox>
+                <mat-checkbox class="example-margin" value="ing-2" name="ingredients2" [(ngModel)]="ingredients2">ingredients 2</mat-checkbox>
+                <mat-checkbox class="example-margin" value="ing-3" name="ingredients3" [(ngModel)]="ingredients3">ingredients 3</mat-checkbox>
+            </section>
           </mat-radio-group>
+          <button mat-raised-button color="primary" (click)="addToCart()">Add to cart</button>
     </mat-card-actions>
 </mat-card>
+</form>
 
-<mat-card class="example-card" style="width: 16rem;">
+<!-- ///////---------- Item 2  --------------//// -->
+<!-- <form   (ngSubmit)="onSubmit()" >
+  <mat-card class="example-card" style="width: 16rem;">
     <mat-card-header>
   <div mat-card-avatar class="example-header-image"></div>
-  <mat-card-title>Hot Pizza Type 2</mat-card-title>
+  <mat-card-title  >{{pizzatype}}</mat-card-title>
   <mat-card-subtitle>Medium Size</mat-card-subtitle>
 </mat-card-header>
 <img mat-card-image src="../../../../assets/images/Pizza1.png" alt="Photo of a Shiba Inu">
@@ -37,24 +43,29 @@
     
 </mat-card-content>
 <mat-card-actions>
-    <mat-radio-group aria-label="Select an option">
-        <mat-radio-button value="1">Small</mat-radio-button>
-        <mat-radio-button value="2">Medium</mat-radio-button>
-        <mat-radio-button value="3">Large</mat-radio-button>
+    <mat-radio-group aria-label="Select an option" [(ngModel)]="size"  name="size">
+        <mat-radio-button value="Small">Small</mat-radio-button>
+        <mat-radio-button value="Medium">Medium</mat-radio-button>
+        <mat-radio-button value="Large">Large</mat-radio-button>
       </mat-radio-group>
-      <mat-radio-group aria-label="Select an option">
-        <section class="example-section">
-            <mat-checkbox class="example-margin">Ingredients  1</mat-checkbox>
-            <mat-checkbox class="example-margin">Ingredients  2</mat-checkbox>
-            <mat-checkbox class="example-margin">Ingredients  3</mat-checkbox>
-            </section>
+      <mat-radio-group aria-label="Select an option" >
+        <section class="example-section" >
+            <mat-checkbox class="example-margin" value="ing-1" name="ingredients1" [(ngModel)]="ingredients1">ingredients 1</mat-checkbox>
+            <mat-checkbox class="example-margin" value="ing-2" name="ingredients2" [(ngModel)]="ingredients2">ingredients 2</mat-checkbox>
+            <mat-checkbox class="example-margin" value="ing-3" name="ingredients3" [(ngModel)]="ingredients3">ingredients 3</mat-checkbox>
+        </section>
       </mat-radio-group>
+      <button mat-raised-button color="primary" (click)="addToCart()">Add to cart</button>
 </mat-card-actions>
 </mat-card>
-<mat-card class="example-card" style="width: 16rem;">
+</form> -->
+
+<!-- ///////---------- Item 3  --------------//// -->
+<!-- <form   (ngSubmit)="onSubmit()" >
+  <mat-card class="example-card" style="width: 16rem;">
     <mat-card-header>
   <div mat-card-avatar class="example-header-image"></div>
-  <mat-card-title>Hot Pizza Type 3</mat-card-title>
+  <mat-card-title  >{{pizzatype}}</mat-card-title>
   <mat-card-subtitle>Medium Size</mat-card-subtitle>
 </mat-card-header>
 <img mat-card-image src="../../../../assets/images/Pizza1.png" alt="Photo of a Shiba Inu">
@@ -62,24 +73,29 @@
     
 </mat-card-content>
 <mat-card-actions>
-    <mat-radio-group aria-label="Select an option">
-        <mat-radio-button value="1">Small</mat-radio-button>
-        <mat-radio-button value="2">Medium</mat-radio-button>
-        <mat-radio-button value="3">Large</mat-radio-button>
+    <mat-radio-group aria-label="Select an option" [(ngModel)]="size"  name="size">
+        <mat-radio-button value="Small">Small</mat-radio-button>
+        <mat-radio-button value="Medium">Medium</mat-radio-button>
+        <mat-radio-button value="Large">Large</mat-radio-button>
       </mat-radio-group>
-      <mat-radio-group aria-label="Select an option">
-        <section class="example-section">
-            <mat-checkbox class="example-margin">Ingredients  1</mat-checkbox>
-            <mat-checkbox class="example-margin">Ingredients  2</mat-checkbox>
-            <mat-checkbox class="example-margin">Ingredients  3</mat-checkbox>
-            </section>
+      <mat-radio-group aria-label="Select an option" >
+        <section class="example-section" >
+            <mat-checkbox class="example-margin" value="ing-1" name="ingredients1" [(ngModel)]="ingredients1">ingredients 1</mat-checkbox>
+            <mat-checkbox class="example-margin" value="ing-2" name="ingredients2" [(ngModel)]="ingredients2">ingredients 2</mat-checkbox>
+            <mat-checkbox class="example-margin" value="ing-3" name="ingredients3" [(ngModel)]="ingredients3">ingredients 3</mat-checkbox>
+        </section>
       </mat-radio-group>
+      <button mat-raised-button color="primary" (click)="addToCart()">Add to cart</button>
 </mat-card-actions>
 </mat-card>
-<mat-card class="example-card" style="width: 16rem;">
+</form> -->
+
+<!-- ///////---------- Item 4  --------------//// -->
+<!-- <form   (ngSubmit)="onSubmit()" >
+  <mat-card class="example-card" style="width: 16rem;">
     <mat-card-header>
   <div mat-card-avatar class="example-header-image"></div>
-  <mat-card-title>Hot Pizza Type 4</mat-card-title>
+  <mat-card-title  >{{pizzatype}}</mat-card-title>
   <mat-card-subtitle>Medium Size</mat-card-subtitle>
 </mat-card-header>
 <img mat-card-image src="../../../../assets/images/Pizza1.png" alt="Photo of a Shiba Inu">
@@ -87,18 +103,20 @@
     
 </mat-card-content>
 <mat-card-actions>
-    <mat-radio-group aria-label="Select an option">
-        <mat-radio-button value="1">Small</mat-radio-button>
-        <mat-radio-button value="2">Medium</mat-radio-button>
-        <mat-radio-button value="3">Large</mat-radio-button>
+    <mat-radio-group aria-label="Select an option" [(ngModel)]="size"  name="size">
+        <mat-radio-button value="Small">Small</mat-radio-button>
+        <mat-radio-button value="Medium">Medium</mat-radio-button>
+        <mat-radio-button value="Large">Large</mat-radio-button>
       </mat-radio-group>
-      <mat-radio-group aria-label="Select an option">
-        <section class="example-section">
-            <mat-checkbox class="example-margin">Ingredients  1</mat-checkbox>
-            <mat-checkbox class="example-margin">Ingredients  2</mat-checkbox>
-            <mat-checkbox class="example-margin">Ingredients  3</mat-checkbox>
-            </section>
+      <mat-radio-group aria-label="Select an option" >
+        <section class="example-section" >
+            <mat-checkbox class="example-margin" value="ing-1" name="ingredients1" [(ngModel)]="ingredients1">ingredients 1</mat-checkbox>
+            <mat-checkbox class="example-margin" value="ing-2" name="ingredients2" [(ngModel)]="ingredients2">ingredients 2</mat-checkbox>
+            <mat-checkbox class="example-margin" value="ing-3" name="ingredients3" [(ngModel)]="ingredients3">ingredients 3</mat-checkbox>
+        </section>
       </mat-radio-group>
+      <button mat-raised-button color="primary" (click)="addToCart()">Add to cart</button>
 </mat-card-actions>
 </mat-card>
+</form> -->
 </div>
