--- a/src/app/pages/maincontent/maincontent.component.css
+++ b/src/app/pages/maincontent/maincontent.component.css
@@ -20,3 +20,14 @@
     list-style-type: none;
     margin-top: 4px;
   }
+  .pricelabel{
+    margin: 38px;
+  }
+  .pricelabel1{
+    margin: 0px;
+  }
+  .pizzatype{
+    height: 22px;
+    width: -webkit-fill-available;
+    margin-bottom: 25px;
+  }
