--- a/src/app/pages/maincontent/maincontent.component.html
+++ b/src/app/pages/maincontent/maincontent.component.html
@@ -1,122 +1,44 @@
 <div class="container-fluid">
 
+  
+
 <!-- ///////---------- Item 1  --------------//// -->
-    <form   (ngSubmit)="onSubmit()" >
-      <mat-card class="example-card" style="width: 16rem;">
+    <form #PizzaCard="ngForm"  (ngSubmit)="onSubmit(PizzaCard)" >
+     <mat-card class="example-card" style="width: 16rem;">
         <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title  >{{pizzatype}}</mat-card-title>
-      <mat-card-subtitle>Medium Size</mat-card-subtitle>
+          <label class="pricelabel1"><b>Select:</b> </label><select class="pizzatype" id="select" name="pizzatype"  [(ngModel)]="model.pizzaType" (ngModelChange)="pizzaChanged()">
+
+            <option *ngFor="let option of pizzaDetails.pizzaOptions" value={{option[0]}}>{{option[0]}}</option>
+      </select>
+     
     </mat-card-header>
-    <img mat-card-image src="../../../../assets/images/Pizza1.png" alt="Photo of a Shiba Inu">
+     <div *ngIf="model.pizzaType">
+
+
+      <img mat-card-image src="../../../../assets/images/Pizza1.png" alt="Pizza Photo">
     <mat-card-content>
         
     </mat-card-content>
     <mat-card-actions>
-        <mat-radio-group aria-label="Select an option" [(ngModel)]="size"  name="size">
-            <mat-radio-button value="Small">Small</mat-radio-button>
-            <mat-radio-button value="Medium">Medium</mat-radio-button>
-            <mat-radio-button value="Large">Large</mat-radio-button>
-          </mat-radio-group>
-          <mat-radio-group aria-label="Select an option" >
+      <mat-radio-group aria-label="Select an option" [(ngModel)]="model.size"  name="size" (ngModelChange)="pizzaChanged()" >
+        <mat-radio-button *ngFor="let option of pizzaDetails.pizzaSize" value={{option[0]}} >{{option[0]}}</mat-radio-button>
+       
+      </mat-radio-group>
+
+     <mat-radio-group aria-label="Select an option"  name="ingredients" >
             <section class="example-section" >
-                <mat-checkbox class="example-margin" value="ing-1" name="ingredients1" [(ngModel)]="ingredients1">ingredients 1</mat-checkbox>
-                <mat-checkbox class="example-margin" value="ing-2" name="ingredients2" [(ngModel)]="ingredients2">ingredients 2</mat-checkbox>
-                <mat-checkbox class="example-margin" value="ing-3" name="ingredients3" [(ngModel)]="ingredients3">ingredients 3</mat-checkbox>
-            </section>
+                <mat-checkbox class="example-margin" *ngFor="let option of pizzaDetails.ingredients;let i=index" [(ngModel)]="model.ingredients[i]" value={{option[0]}} name="option" (ngModelChange)="pizzaChanged()">{{option[0]}}</mat-checkbox>
+                </section>
           </mat-radio-group>
-          <button mat-raised-button color="primary" (click)="addToCart()">Add to cart</button>
+          <label class="pricelabel"><b>Price: -</b> {{totalPrice}}</label>
+          <button mat-raised-button color="primary" >Add to cart</button>
     </mat-card-actions>
+      </div> <div *ngIf="!model.pizzaType">
+        <h1>Please select a Pizza Type</h1>
+      </div>
+    
 </mat-card>
 </form>
 
-<!-- ///////---------- Item 2  --------------//// -->
-<!-- <form   (ngSubmit)="onSubmit()" >
-  <mat-card class="example-card" style="width: 16rem;">
-    <mat-card-header>
-  <div mat-card-avatar class="example-header-image"></div>
-  <mat-card-title  >{{pizzatype}}</mat-card-title>
-  <mat-card-subtitle>Medium Size</mat-card-subtitle>
-</mat-card-header>
-<img mat-card-image src="../../../../assets/images/Pizza1.png" alt="Photo of a Shiba Inu">
-<mat-card-content>
-    
-</mat-card-content>
-<mat-card-actions>
-    <mat-radio-group aria-label="Select an option" [(ngModel)]="size"  name="size">
-        <mat-radio-button value="Small">Small</mat-radio-button>
-        <mat-radio-button value="Medium">Medium</mat-radio-button>
-        <mat-radio-button value="Large">Large</mat-radio-button>
-      </mat-radio-group>
-      <mat-radio-group aria-label="Select an option" >
-        <section class="example-section" >
-            <mat-checkbox class="example-margin" value="ing-1" name="ingredients1" [(ngModel)]="ingredients1">ingredients 1</mat-checkbox>
-            <mat-checkbox class="example-margin" value="ing-2" name="ingredients2" [(ngModel)]="ingredients2">ingredients 2</mat-checkbox>
-            <mat-checkbox class="example-margin" value="ing-3" name="ingredients3" [(ngModel)]="ingredients3">ingredients 3</mat-checkbox>
-        </section>
-      </mat-radio-group>
-      <button mat-raised-button color="primary" (click)="addToCart()">Add to cart</button>
-</mat-card-actions>
-</mat-card>
-</form> -->
 
-<!-- ///////---------- Item 3  --------------//// -->
-<!-- <form   (ngSubmit)="onSubmit()" >
-  <mat-card class="example-card" style="width: 16rem;">
-    <mat-card-header>
-  <div mat-card-avatar class="example-header-image"></div>
-  <mat-card-title  >{{pizzatype}}</mat-card-title>
-  <mat-card-subtitle>Medium Size</mat-card-subtitle>
-</mat-card-header>
-<img mat-card-image src="../../../../assets/images/Pizza1.png" alt="Photo of a Shiba Inu">
-<mat-card-content>
-    
-</mat-card-content>
-<mat-card-actions>
-    <mat-radio-group aria-label="Select an option" [(ngModel)]="size"  name="size">
-        <mat-radio-button value="Small">Small</mat-radio-button>
-        <mat-radio-button value="Medium">Medium</mat-radio-button>
-        <mat-radio-button value="Large">Large</mat-radio-button>
-      </mat-radio-group>
-      <mat-radio-group aria-label="Select an option" >
-        <section class="example-section" >
-            <mat-checkbox class="example-margin" value="ing-1" name="ingredients1" [(ngModel)]="ingredients1">ingredients 1</mat-checkbox>
-            <mat-checkbox class="example-margin" value="ing-2" name="ingredients2" [(ngModel)]="ingredients2">ingredients 2</mat-checkbox>
-            <mat-checkbox class="example-margin" value="ing-3" name="ingredients3" [(ngModel)]="ingredients3">ingredients 3</mat-checkbox>
-        </section>
-      </mat-radio-group>
-      <button mat-raised-button color="primary" (click)="addToCart()">Add to cart</button>
-</mat-card-actions>
-</mat-card>
-</form> -->
-
-<!-- ///////---------- Item 4  --------------//// -->
-<!-- <form   (ngSubmit)="onSubmit()" >
-  <mat-card class="example-card" style="width: 16rem;">
-    <mat-card-header>
-  <div mat-card-avatar class="example-header-image"></div>
-  <mat-card-title  >{{pizzatype}}</mat-card-title>
-  <mat-card-subtitle>Medium Size</mat-card-subtitle>
-</mat-card-header>
-<img mat-card-image src="../../../../assets/images/Pizza1.png" alt="Photo of a Shiba Inu">
-<mat-card-content>
-    
-</mat-card-content>
-<mat-card-actions>
-    <mat-radio-group aria-label="Select an option" [(ngModel)]="size"  name="size">
-        <mat-radio-button value="Small">Small</mat-radio-button>
-        <mat-radio-button value="Medium">Medium</mat-radio-button>
-        <mat-radio-button value="Large">Large</mat-radio-button>
-      </mat-radio-group>
-      <mat-radio-group aria-label="Select an option" >
-        <section class="example-section" >
-            <mat-checkbox class="example-margin" value="ing-1" name="ingredients1" [(ngModel)]="ingredients1">ingredients 1</mat-checkbox>
-            <mat-checkbox class="example-margin" value="ing-2" name="ingredients2" [(ngModel)]="ingredients2">ingredients 2</mat-checkbox>
-            <mat-checkbox class="example-margin" value="ing-3" name="ingredients3" [(ngModel)]="ingredients3">ingredients 3</mat-checkbox>
-        </section>
-      </mat-radio-group>
-      <button mat-raised-button color="primary" (click)="addToCart()">Add to cart</button>
-</mat-card-actions>
-</mat-card>
-</form> -->
 </div>
